# src/routes/wish/wish.controller.ts
@@ -7,6 +7,8 @@ import {
   Body,
   Response,
   Example,
+  Get,
+  Query,
   Tags
 } from 'tsoa';
 import {
@@ -15,7 +17,13 @@ import {
   ErrorResponse
 } from '../../config/tsoaResponse.js';
 import { WishService } from './wish.service.js';
-import { WishResDTO, DeleteWishResDTO, WishReqDTO } from './wish.dto.js';
+import {
+  WishResDTO,
+  WishListResDTO,
+  DeleteWishResDTO,
+  WishReqDTO,
+  WishType
+} from './wish.dto.js';
 
 @Route('/wish')
 @Tags('Wish')
@@ -53,5 +61,22 @@ export class WishController extends Controller {
   ): Promise<TsoaResponse<DeleteWishResDTO>> {
     const result = await this.wishService.deleteWish(body);
     return new ResponseHandler<DeleteWishResDTO>(result);
+  }
+
+  /**
+   * @summary 위시 내역 조회
+   * @param type 위시 타입
+   * REQUEST: 요청글
+   * PROPOSAL: 제안글
+   * ITEM: 마켓글
+   * @returns 위시 아이템 리스트
+   */
+  @SuccessResponse(200, '위시 내역 조회 완료')
+  @Get('/')
+  public async getWishList(
+    @Query() type: WishType
+  ): Promise<TsoaResponse<WishListResDTO>> {
+    const result = await this.wishService.getWishList(type);
+    return new ResponseHandler<WishListResDTO>(result);
   }
 }
